<resources>
    <string name="app_name">BMI-Calculator</string>
    <string name="sev_uw">severely underweight</string>
    <string name="me_uw">medium underweight</string>
    <string name="li_uw">light underweight</string>
    <string name="norm_w">normal weight</string>
    <string name="li_ow">pre Obesity</string>
    <string name="me_ow">Obesity grade I</string>
    <string name="sev_ow">Obesity grade II</string>
    <string name="tre_ow">Obesity grade III</string>
    <string name="tv_1">enter height</string>
    <string name="tv_2">enter weight</string>
    <string name="btn_1">calculate BMI</string>
    <string name="tv_3" translatable="false">BMI=</string>
    <string name="tv_4">BMI category=</string>
    <string name="tv_5" translatable="false">BMI</string>
    <string name="tv_6">BMI Category</string>
    <string name="ev_1">height</string>
    <string name="ev_2">weight in kg</string>
    <string name="NaN_toast">please enter numbers</string>
    <string name="centimeter">centimeter</string>
    <string name="meter">meter</string>
</resources>